// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ApprovalDetail.vue > should emit event on deleting the approval 1`] = `
<div
  class="v-container v-locale--is-ltr"
>
  <div
    class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
  >
    <!---->
    <div
      class="v-card__loader"
    >
      <div
        aria-hidden="true"
        aria-valuemax="100"
        aria-valuemin="0"
        class="v-progress-linear v-theme--light v-locale--is-ltr"
        role="progressbar"
        style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
      >
        <!---->
        <div
          class="v-progress-linear__background"
        />
        <div
          class="v-progress-linear__buffer"
          style="width: 0%;"
        />
        <transition-stub
          appear="false"
          css="true"
          name="fade-transition"
          persisted="false"
        >
          <div
            class="v-progress-linear__indeterminate"
          >
            
            <div
              class="v-progress-linear__indeterminate long"
            />
            <div
              class="v-progress-linear__indeterminate short"
            />
            
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    
    <div
      class="v-card-title"
    >
      <!--v-if-->
      <i
        aria-hidden="true"
        class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
      />
      <span
        class="title font-weight-light"
      >
        Should be approved by the users who
      </span>
      <div
        class="flex-grow-1"
      />
      <!--v-if-->
    </div>
    <div
      class="v-card-text"
    >
      <div
        class="v-row"
      >
        <div
          class="v-col"
        >
          <!--v-if-->
          <!--v-if-->
          <div
            class="v-row"
          >
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
    
    <!---->
    
    <!---->
    <span
      class="v-card__underlay"
    />
    
  </div>
  
  <!---->
  <!---->
  
</div>
`;

exports[`ApprovalDetail.vue > should not render dragging icon when it is not editable 1`] = `
<div
  class="v-container v-locale--is-ltr"
>
  <div
    class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
  >
    <!---->
    <div
      class="v-card__loader"
    >
      <div
        aria-hidden="true"
        aria-valuemax="100"
        aria-valuemin="0"
        class="v-progress-linear v-theme--light v-locale--is-ltr"
        role="progressbar"
        style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
      >
        <!---->
        <div
          class="v-progress-linear__background"
        />
        <div
          class="v-progress-linear__buffer"
          style="width: 0%;"
        />
        <transition-stub
          appear="false"
          css="true"
          name="fade-transition"
          persisted="false"
        >
          <div
            class="v-progress-linear__indeterminate"
          >
            
            <div
              class="v-progress-linear__indeterminate long"
            />
            <div
              class="v-progress-linear__indeterminate short"
            />
            
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    
    <div
      class="v-card-title"
    >
      <!--v-if-->
      <i
        aria-hidden="true"
        class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
      />
      <span
        class="title font-weight-light"
      >
        Should be approved by the users who
      </span>
      <div
        class="flex-grow-1"
      />
      <!--v-if-->
    </div>
    <div
      class="v-card-text"
    >
      <div
        class="v-row"
      >
        <div
          class="v-col"
        >
          <!--v-if-->
          <!--v-if-->
          <div
            class="v-row"
          >
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
    
    <!---->
    
    <!---->
    <span
      class="v-card__underlay"
    />
    
  </div>
  
  <!---->
  <!---->
  
</div>
`;

exports[`ApprovalDetail.vue > should not render groups lane when the group list is empty 1`] = `
<div
  class="v-container v-locale--is-ltr"
>
  <div
    class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
  >
    <!---->
    <div
      class="v-card__loader"
    >
      <div
        aria-hidden="true"
        aria-valuemax="100"
        aria-valuemin="0"
        class="v-progress-linear v-theme--light v-locale--is-ltr"
        role="progressbar"
        style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
      >
        <!---->
        <div
          class="v-progress-linear__background"
        />
        <div
          class="v-progress-linear__buffer"
          style="width: 0%;"
        />
        <transition-stub
          appear="false"
          css="true"
          name="fade-transition"
          persisted="false"
        >
          <div
            class="v-progress-linear__indeterminate"
          >
            
            <div
              class="v-progress-linear__indeterminate long"
            />
            <div
              class="v-progress-linear__indeterminate short"
            />
            
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    
    <div
      class="v-card-title"
    >
      <i
        aria-hidden="true"
        class="mdi-menu mdi v-icon notranslate v-theme--light v-icon--size-default column-drag-handle mb-1 mr-3"
      />
      <i
        aria-hidden="true"
        class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
      />
      <span
        class="title font-weight-light"
      >
        Should be approved by the users who
      </span>
      <div
        class="flex-grow-1"
      />
      
      
      <button
        class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated"
        dark=""
        fab=""
        modelvalue="false"
        small=""
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="mdi-settings mdi v-icon notranslate v-theme--light v-icon--size-default"
          />
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!---->
      
    </div>
    <div
      class="v-card-text"
    >
      <div
        class="v-row"
      >
        <div
          class="v-col"
        >
          <!--v-if-->
          <!--v-if-->
          <div
            class="v-row"
          >
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
    
    <!---->
    
    <!---->
    <span
      class="v-card__underlay"
    />
    
  </div>
  
  <!---->
  <!---->
  
</div>
`;

exports[`ApprovalDetail.vue > should not render permissions lane when the permissions list is empty 1`] = `
<div
  class="v-container v-locale--is-ltr"
>
  <div
    class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
  >
    <!---->
    <div
      class="v-card__loader"
    >
      <div
        aria-hidden="true"
        aria-valuemax="100"
        aria-valuemin="0"
        class="v-progress-linear v-theme--light v-locale--is-ltr"
        role="progressbar"
        style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
      >
        <!---->
        <div
          class="v-progress-linear__background"
        />
        <div
          class="v-progress-linear__buffer"
          style="width: 0%;"
        />
        <transition-stub
          appear="false"
          css="true"
          name="fade-transition"
          persisted="false"
        >
          <div
            class="v-progress-linear__indeterminate"
          >
            
            <div
              class="v-progress-linear__indeterminate long"
            />
            <div
              class="v-progress-linear__indeterminate short"
            />
            
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    
    <div
      class="v-card-title"
    >
      <i
        aria-hidden="true"
        class="mdi-menu mdi v-icon notranslate v-theme--light v-icon--size-default column-drag-handle mb-1 mr-3"
      />
      <i
        aria-hidden="true"
        class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
      />
      <span
        class="title font-weight-light"
      >
        Should be approved by the users who
      </span>
      <div
        class="flex-grow-1"
      />
      
      
      <button
        class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated"
        dark=""
        fab=""
        modelvalue="false"
        small=""
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="mdi-settings mdi v-icon notranslate v-theme--light v-icon--size-default"
          />
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!---->
      
    </div>
    <div
      class="v-card-text"
    >
      <div
        class="v-row"
      >
        <div
          class="v-col"
        >
          <!--v-if-->
          <!--v-if-->
          <div
            class="v-row"
          >
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
    
    <!---->
    
    <!---->
    <span
      class="v-card__underlay"
    />
    
  </div>
  
  <!---->
  <!---->
  
</div>
`;

exports[`ApprovalDetail.vue > should not render settings button if not editable 1`] = `
<div
  class="v-container v-locale--is-ltr"
>
  <div
    class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
  >
    <!---->
    <div
      class="v-card__loader"
    >
      <div
        aria-hidden="true"
        aria-valuemax="100"
        aria-valuemin="0"
        class="v-progress-linear v-theme--light v-locale--is-ltr"
        role="progressbar"
        style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
      >
        <!---->
        <div
          class="v-progress-linear__background"
        />
        <div
          class="v-progress-linear__buffer"
          style="width: 0%;"
        />
        <transition-stub
          appear="false"
          css="true"
          name="fade-transition"
          persisted="false"
        >
          <div
            class="v-progress-linear__indeterminate"
          >
            
            <div
              class="v-progress-linear__indeterminate long"
            />
            <div
              class="v-progress-linear__indeterminate short"
            />
            
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    
    <div
      class="v-card-title"
    >
      <!--v-if-->
      <i
        aria-hidden="true"
        class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
      />
      <span
        class="title font-weight-light"
      >
        Should be approved by the users who
      </span>
      <div
        class="flex-grow-1"
      />
      <!--v-if-->
    </div>
    <div
      class="v-card-text"
    >
      <div
        class="v-row"
      >
        <div
          class="v-col"
        >
          <!--v-if-->
          <!--v-if-->
          <div
            class="v-row"
          >
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
    
    <!---->
    
    <!---->
    <span
      class="v-card__underlay"
    />
    
  </div>
  
  <!---->
  <!---->
  
</div>
`;

exports[`ApprovalDetail.vue > should not render the buttons in the settings as default 1`] = `
<div
  class="v-container v-locale--is-ltr"
>
  <div
    class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
  >
    <!---->
    <div
      class="v-card__loader"
    >
      <div
        aria-hidden="true"
        aria-valuemax="100"
        aria-valuemin="0"
        class="v-progress-linear v-theme--light v-locale--is-ltr"
        role="progressbar"
        style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
      >
        <!---->
        <div
          class="v-progress-linear__background"
        />
        <div
          class="v-progress-linear__buffer"
          style="width: 0%;"
        />
        <transition-stub
          appear="false"
          css="true"
          name="fade-transition"
          persisted="false"
        >
          <div
            class="v-progress-linear__indeterminate"
          >
            
            <div
              class="v-progress-linear__indeterminate long"
            />
            <div
              class="v-progress-linear__indeterminate short"
            />
            
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    
    <div
      class="v-card-title"
    >
      <!--v-if-->
      <i
        aria-hidden="true"
        class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
      />
      <span
        class="title font-weight-light"
      >
        Should be approved by the users who
      </span>
      <div
        class="flex-grow-1"
      />
      <!--v-if-->
    </div>
    <div
      class="v-card-text"
    >
      <div
        class="v-row"
      >
        <div
          class="v-col"
        >
          <!--v-if-->
          <!--v-if-->
          <div
            class="v-row"
          >
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
    
    <!---->
    
    <!---->
    <span
      class="v-card__underlay"
    />
    
  </div>
  
  <!---->
  <!---->
  
</div>
`;

exports[`ApprovalDetail.vue > should render approval icon correctly 1`] = `
<div
  class="v-container v-locale--is-ltr"
>
  <div
    class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
  >
    <!---->
    <div
      class="v-card__loader"
    >
      <div
        aria-hidden="true"
        aria-valuemax="100"
        aria-valuemin="0"
        class="v-progress-linear v-theme--light v-locale--is-ltr"
        role="progressbar"
        style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
      >
        <!---->
        <div
          class="v-progress-linear__background"
        />
        <div
          class="v-progress-linear__buffer"
          style="width: 0%;"
        />
        <transition-stub
          appear="false"
          css="true"
          name="fade-transition"
          persisted="false"
        >
          <div
            class="v-progress-linear__indeterminate"
          >
            
            <div
              class="v-progress-linear__indeterminate long"
            />
            <div
              class="v-progress-linear__indeterminate short"
            />
            
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    
    <div
      class="v-card-title"
    >
      <i
        aria-hidden="true"
        class="mdi-menu mdi v-icon notranslate v-theme--light v-icon--size-default column-drag-handle mb-1 mr-3"
      />
      <i
        aria-hidden="true"
        class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
      />
      <span
        class="title font-weight-light"
      >
        Should be approved by the users who
      </span>
      <div
        class="flex-grow-1"
      />
      
      
      <button
        class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated"
        dark=""
        fab=""
        modelvalue="false"
        small=""
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="mdi-settings mdi v-icon notranslate v-theme--light v-icon--size-default"
          />
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!---->
      
    </div>
    <div
      class="v-card-text"
    >
      <div
        class="v-row"
      >
        <div
          class="v-col"
        >
          <!--v-if-->
          <!--v-if-->
          <div
            class="v-row"
          >
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
    
    <!---->
    
    <!---->
    <span
      class="v-card__underlay"
    />
    
  </div>
  
  <!---->
  <!---->
  
</div>
`;

exports[`ApprovalDetail.vue > should render dragging icon when it is editable 1`] = `
<div
  class="v-container v-locale--is-ltr"
>
  <div
    class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
  >
    <!---->
    <div
      class="v-card__loader"
    >
      <div
        aria-hidden="true"
        aria-valuemax="100"
        aria-valuemin="0"
        class="v-progress-linear v-theme--light v-locale--is-ltr"
        role="progressbar"
        style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
      >
        <!---->
        <div
          class="v-progress-linear__background"
        />
        <div
          class="v-progress-linear__buffer"
          style="width: 0%;"
        />
        <transition-stub
          appear="false"
          css="true"
          name="fade-transition"
          persisted="false"
        >
          <div
            class="v-progress-linear__indeterminate"
          >
            
            <div
              class="v-progress-linear__indeterminate long"
            />
            <div
              class="v-progress-linear__indeterminate short"
            />
            
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    
    <div
      class="v-card-title"
    >
      <i
        aria-hidden="true"
        class="mdi-menu mdi v-icon notranslate v-theme--light v-icon--size-default column-drag-handle mb-1 mr-3"
      />
      <i
        aria-hidden="true"
        class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
      />
      <span
        class="title font-weight-light"
      >
        Should be approved by the users who
      </span>
      <div
        class="flex-grow-1"
      />
      
      
      <button
        class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated"
        dark=""
        fab=""
        modelvalue="false"
        small=""
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="mdi-settings mdi v-icon notranslate v-theme--light v-icon--size-default"
          />
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!---->
      
    </div>
    <div
      class="v-card-text"
    >
      <div
        class="v-row"
      >
        <div
          class="v-col"
        >
          <!--v-if-->
          <!--v-if-->
          <div
            class="v-row"
          >
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
    
    <!---->
    
    <!---->
    <span
      class="v-card__underlay"
    />
    
  </div>
  
  <!---->
  <!---->
  
</div>
`;

exports[`ApprovalDetail.vue > should render groups lane when the group list is not empty 1`] = `
<div
  class="v-container v-locale--is-ltr"
>
  <div
    class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
  >
    <!---->
    <div
      class="v-card__loader"
    >
      <div
        aria-hidden="true"
        aria-valuemax="100"
        aria-valuemin="0"
        class="v-progress-linear v-theme--light v-locale--is-ltr"
        role="progressbar"
        style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
      >
        <!---->
        <div
          class="v-progress-linear__background"
        />
        <div
          class="v-progress-linear__buffer"
          style="width: 0%;"
        />
        <transition-stub
          appear="false"
          css="true"
          name="fade-transition"
          persisted="false"
        >
          <div
            class="v-progress-linear__indeterminate"
          >
            
            <div
              class="v-progress-linear__indeterminate long"
            />
            <div
              class="v-progress-linear__indeterminate short"
            />
            
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    
    <div
      class="v-card-title"
    >
      <i
        aria-hidden="true"
        class="mdi-menu mdi v-icon notranslate v-theme--light v-icon--size-default column-drag-handle mb-1 mr-3"
      />
      <i
        aria-hidden="true"
        class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
      />
      <span
        class="title font-weight-light"
      >
        Should be approved by the users who
      </span>
      <div
        class="flex-grow-1"
      />
      
      
      <button
        class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated"
        dark=""
        fab=""
        modelvalue="false"
        small=""
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="mdi-settings mdi v-icon notranslate v-theme--light v-icon--size-default"
          />
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!---->
      
    </div>
    <div
      class="v-card-text"
    >
      <div
        class="v-row"
      >
        <div
          class="v-col"
        >
          <!--v-if-->
          <div
            class="v-row groups-lane"
          >
            <div
              class="v-col v-col-4"
            >
              <label>
                are in groups:
              </label>
            </div>
            <div
              class="v-col"
            >
              
              <span>
                <span
                  class="v-chip v-theme--light text-primary v-chip--density-default v-chip--size-default v-chip--variant-tonal white--text"
                  draggable="false"
                >
                  
                  <!---->
                  <span
                    class="v-chip__underlay"
                  />
                  
                  <!---->
                  <!---->
                  <div
                    class="v-chip__content"
                    data-no-activator=""
                  >
                    
                    <i
                      aria-hidden="true"
                      class="mdi-account-multiple mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--start"
                    />
                    <span>
                      group-1
                    </span>
                    
                  </div>
                  <!---->
                  <!---->
                </span>
                <span>
                  or
                </span>
              </span>
              <span>
                <span
                  class="v-chip v-theme--light text-primary v-chip--density-default v-chip--size-default v-chip--variant-tonal white--text"
                  draggable="false"
                >
                  
                  <!---->
                  <span
                    class="v-chip__underlay"
                  />
                  
                  <!---->
                  <!---->
                  <div
                    class="v-chip__content"
                    data-no-activator=""
                  >
                    
                    <i
                      aria-hidden="true"
                      class="mdi-account-multiple mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--start"
                    />
                    <span>
                      group-2
                    </span>
                    
                  </div>
                  <!---->
                  <!---->
                </span>
                <!--v-if-->
              </span>
              
            </div>
          </div>
          <div
            class="v-row"
          >
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
    
    <!---->
    
    <!---->
    <span
      class="v-card__underlay"
    />
    
  </div>
  
  <!---->
  <!---->
  
</div>
`;

exports[`ApprovalDetail.vue > should render permissions lane when the permission list is not empty 1`] = `
<div
  class="v-container v-locale--is-ltr"
>
  <div
    class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
  >
    <!---->
    <div
      class="v-card__loader"
    >
      <div
        aria-hidden="true"
        aria-valuemax="100"
        aria-valuemin="0"
        class="v-progress-linear v-theme--light v-locale--is-ltr"
        role="progressbar"
        style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
      >
        <!---->
        <div
          class="v-progress-linear__background"
        />
        <div
          class="v-progress-linear__buffer"
          style="width: 0%;"
        />
        <transition-stub
          appear="false"
          css="true"
          name="fade-transition"
          persisted="false"
        >
          <div
            class="v-progress-linear__indeterminate"
          >
            
            <div
              class="v-progress-linear__indeterminate long"
            />
            <div
              class="v-progress-linear__indeterminate short"
            />
            
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    
    <div
      class="v-card-title"
    >
      <i
        aria-hidden="true"
        class="mdi-menu mdi v-icon notranslate v-theme--light v-icon--size-default column-drag-handle mb-1 mr-3"
      />
      <i
        aria-hidden="true"
        class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
      />
      <span
        class="title font-weight-light"
      >
        Should be approved by the users who
      </span>
      <div
        class="flex-grow-1"
      />
      
      
      <button
        class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated"
        dark=""
        fab=""
        modelvalue="false"
        small=""
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="mdi-settings mdi v-icon notranslate v-theme--light v-icon--size-default"
          />
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!---->
      
    </div>
    <div
      class="v-card-text"
    >
      <div
        class="v-row"
      >
        <div
          class="v-col"
        >
          <div
            class="v-row permissions-lane"
          >
            <div
              class="v-col v-col-4"
            >
              <label>
                have permissions:
              </label>
            </div>
            <div
              class="v-col"
            >
              
              <span>
                <span
                  class="v-chip v-theme--light text-primary v-chip--density-default v-chip--size-default v-chip--variant-tonal white--text"
                  draggable="false"
                >
                  
                  <!---->
                  <span
                    class="v-chip__underlay"
                  />
                  
                  <!---->
                  <!---->
                  <div
                    class="v-chip__content"
                    data-no-activator=""
                  >
                    
                    <i
                      aria-hidden="true"
                      class="mdi-lock mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--start"
                    />
                    <span>
                      permission-1
                    </span>
                    
                  </div>
                  <!---->
                  <!---->
                </span>
                <span>
                  or
                </span>
              </span>
              <span>
                <span
                  class="v-chip v-theme--light text-primary v-chip--density-default v-chip--size-default v-chip--variant-tonal white--text"
                  draggable="false"
                >
                  
                  <!---->
                  <span
                    class="v-chip__underlay"
                  />
                  
                  <!---->
                  <!---->
                  <div
                    class="v-chip__content"
                    data-no-activator=""
                  >
                    
                    <i
                      aria-hidden="true"
                      class="mdi-lock mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--start"
                    />
                    <span>
                      permission-2
                    </span>
                    
                  </div>
                  <!---->
                  <!---->
                </span>
                <!--v-if-->
              </span>
              
            </div>
          </div>
          <!--v-if-->
          <div
            class="v-row"
          >
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
    
    <!---->
    
    <!---->
    <span
      class="v-card__underlay"
    />
    
  </div>
  
  <!---->
  <!---->
  
</div>
`;

exports[`ApprovalDetail.vue > should render settings button if editable 1`] = `
<div
  class="v-container v-locale--is-ltr"
>
  <div
    class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
  >
    <!---->
    <div
      class="v-card__loader"
    >
      <div
        aria-hidden="true"
        aria-valuemax="100"
        aria-valuemin="0"
        class="v-progress-linear v-theme--light v-locale--is-ltr"
        role="progressbar"
        style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
      >
        <!---->
        <div
          class="v-progress-linear__background"
        />
        <div
          class="v-progress-linear__buffer"
          style="width: 0%;"
        />
        <transition-stub
          appear="false"
          css="true"
          name="fade-transition"
          persisted="false"
        >
          <div
            class="v-progress-linear__indeterminate"
          >
            
            <div
              class="v-progress-linear__indeterminate long"
            />
            <div
              class="v-progress-linear__indeterminate short"
            />
            
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    
    <div
      class="v-card-title"
    >
      <i
        aria-hidden="true"
        class="mdi-menu mdi v-icon notranslate v-theme--light v-icon--size-default column-drag-handle mb-1 mr-3"
      />
      <i
        aria-hidden="true"
        class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
      />
      <span
        class="title font-weight-light"
      >
        Should be approved by the users who
      </span>
      <div
        class="flex-grow-1"
      />
      
      
      <button
        class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated"
        dark=""
        fab=""
        modelvalue="false"
        small=""
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="mdi-settings mdi v-icon notranslate v-theme--light v-icon--size-default"
          />
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!---->
      
    </div>
    <div
      class="v-card-text"
    >
      <div
        class="v-row"
      >
        <div
          class="v-col"
        >
          <!--v-if-->
          <!--v-if-->
          <div
            class="v-row"
          >
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
    
    <!---->
    
    <!---->
    <span
      class="v-card__underlay"
    />
    
  </div>
  
  <!---->
  <!---->
  
</div>
`;

exports[`ApprovalDetail.vue > should render title correctly 1`] = `
<div
  class="v-container v-locale--is-ltr"
>
  <div
    class="v-card v-theme--light v-card--density-default v-card--variant-elevated"
  >
    <!---->
    <div
      class="v-card__loader"
    >
      <div
        aria-hidden="true"
        aria-valuemax="100"
        aria-valuemin="0"
        class="v-progress-linear v-theme--light v-locale--is-ltr"
        role="progressbar"
        style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
      >
        <!---->
        <div
          class="v-progress-linear__background"
        />
        <div
          class="v-progress-linear__buffer"
          style="width: 0%;"
        />
        <transition-stub
          appear="false"
          css="true"
          name="fade-transition"
          persisted="false"
        >
          <div
            class="v-progress-linear__indeterminate"
          >
            
            <div
              class="v-progress-linear__indeterminate long"
            />
            <div
              class="v-progress-linear__indeterminate short"
            />
            
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    
    <div
      class="v-card-title"
    >
      <i
        aria-hidden="true"
        class="mdi-menu mdi v-icon notranslate v-theme--light v-icon--size-default column-drag-handle mb-1 mr-3"
      />
      <i
        aria-hidden="true"
        class="mdi-account-multiple-check mdi v-icon notranslate v-theme--light v-icon--size-default mb-1 mr-3"
      />
      <span
        class="title font-weight-light"
      >
        Should be approved by the users who
      </span>
      <div
        class="flex-grow-1"
      />
      
      
      <button
        class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated"
        dark=""
        fab=""
        modelvalue="false"
        small=""
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="mdi-settings mdi v-icon notranslate v-theme--light v-icon--size-default"
          />
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!---->
      
    </div>
    <div
      class="v-card-text"
    >
      <div
        class="v-row"
      >
        <div
          class="v-col"
        >
          <!--v-if-->
          <!--v-if-->
          <div
            class="v-row"
          >
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
    
    <!---->
    
    <!---->
    <span
      class="v-card__underlay"
    />
    
  </div>
  
  <!---->
  <!---->
  
</div>
`;
